# BCH

./: #Makefile#  .gitignore  .sconsign.dblite  CMakeCache.txt  CMakeLists.txt  Makefile~  README.md  SConscript_bin  SConstruct  SConstruct~  config.xml  config.xml~  main.cpp
BCH_codes/: CMakeLists.txt  Coder.cpp  Coder.h  Config.cpp  Config.cpp~  Config.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  GfField.cpp  GfField.h  Polynomial.cpp  Polynomial.h  SConscript_object  SConscript_object~
bch_tests/: CMakeLists.txt  SConscript_bin  SConscript_bin~  runBasicTests.cpp  test_cases.h
object/BCH_codes/: prog1
